@@ -10,6 +10,5 @@ pm_to_blib*
 cover_db
 pod2htm*.tmp
 HTTP-Exception-*
-*.kpf
 *META.yml
 MANIFEST.bak
